--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 	<body>
 		<header class="header">
 			<div class="header__wrapper">
+				<div class="header__cirlce-top circle"></div>
+				<div class="header__cirlce-mid circle">
+					<p class="header__cirlce-mid__text">cena netto 1429,00 zł</p>
+				</div>
+				<div class="header__cirlce-top-black circle"></div>
 				<nav class="header__nav container">
-					<div class="header__nav__wrapper">
+					<div class="header__nav__wrapper ">
 						<button class="header__burger">BURGER</button>
 
 						<div class="header__nav__content">
@@ -78,10 +83,97 @@
 					</div>
 				</nav>
 
-				<div class="header__center"></div>
+				<div class="header__content container">
+					<div class="header__left">
+						<h3 class="header__left-heading">Masz pytanie?</h3>
+						<a class="header__left-text" href="#">Wyślij wiadomość</a>
+
+						<ul class="header__left__socials-list">
+							<li class="header__left__social-element">
+								<a class="header__left__social-link" href="#">
+									<i class="header__left__social-icon fa-brands fa-facebook-f"></i>
+								</a>
+							</li>
+
+							<li class="header__left__social-element">
+								<a class="header__left__social-link" href="#">									
+									<i class=" header__left__social-icon fa-brands fa-instagram"></i>
+								</a>
+							</li>
+
+							<li class="header__left__social-element">
+								<a class="header__left__social-link" href="#">
+									<i class="header__left__social-icon fa-brands fa-youtube"></i>
+								</a>
+							</li>
+
+							<li class="header__left__social-element">
+								<a class="header__left__social-link" href="#">
+									<i class="header__left__social-icon fa-brands fa-linkedin"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+
+					<div class="header__center">
+						<div class="header__center-bg"></div>
+
+						<div class="header__center__signs-left signs">
+							<img class="sign__icon sum" src="/img/aak.png"></img>
+							<img class="sign__icon subtraction" src="/img/aai.png"></img>
+							<img class="sign__icon multiplication" src="/img/aam.png"></img>
+							<img class="sign__icon divide" src="/img/aag.png"></img>
+						</div>
+						
+						<div class="header__center__signs-right signs">
+							<img class="sign__icon sum" src="/img/aak.png"></img>
+							<img class="sign__icon subtraction" src="/img/aai.png"></img>
+							<img class="sign__icon multiplication" src="/img/aam.png"></img>
+							<img class="sign__icon divide" src="/img/aag.png"></img>
+						</div>
+
+						<div class="header__center__signs-right-bottm signs">
+							<img class="sign__icon sum" src="/img/aak.png"></img>
+							<img class="sign__icon subtraction" src="/img/aai.png"></img>
+							<img class="sign__icon multiplication" src="/img/aam.png"></img>
+							<img class="sign__icon divide" src="/img/aag.png"></img>
+						</div>
+						
+
+						<div class="header__center__img">
+							<img
+								class="header__center__img-photo"
+								src="/img/ajt@2x.png"
+								alt="Kalkulatory"
+							/>
+						</div>
+						<div class="header__center__content">
+							<h2 class="header__center__heading">DATECS WP-50 Wi-Fi Online</h2>
+							<a
+								class="header__center__link header__center__link-first"
+								href="#"
+								>Zobacz produkt w sklepie</a
+							>
+							<a class="header__center__link" href="#">Porównaj</a>
+						</div>
+						<button class="header_button header_button--left btn">
+						</button>
+						<button class="header_button header_button--right btn">
+						</button>
+					</div>
+
+					<div class="header__right">
+						<h3 class="header__right-heading">Język</h3>
+						<a class="header__right__flag-link" href="#"></a>
+						<a class="header__right__flag-link" href="#"></a>
+						<a class="header__right__flag-link flag-link--active" href="#"></a>
+					</div>
+				</div>
 			</div>
 		</header>
-		<main></main>
+		<main class="main">
+			
+		</main>
 
 		<!-- <script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
