added contact section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="main.css" />
+		<link rel="stylesheet" href="contact.css" />
 		<script
 			src="https://kit.fontawesome.com/0ef49ab5e4.js"
 			crossorigin="anonymous"
@@ -237,15 +238,44 @@
 					<h2 class="main__heading">Katalog produktów</h2>
 					<div class="main__content__products-box"></div>
 				</section>
+			
 			</div>
+
 		</main>
 		<div class="bg-right"></div>
+		<div class="bg-right bg-right-second"></div>
+		
+		<section class="section__contact">
+			<h2 class="section__heading container">Kontakt</h2>
+			<div class="section__contact__map">
+				<div class="section__contact__logo-esc">
+					<img class="section__contact__logo-esc-img" src="/img/ajv.png" alt="logo esc">
+				</div>
+				<img src="/img/ajx.png" alt="mapa">
+				<img src="/img/ajw.png" alt="mapa">
+			</div>
+			<div class="section__contact__data container">
+				<ul class="section__contact__list section__contact__list--left">
+					<li class="section__contact__list-item">ESC SA Centrum - ul. Mieszczańska 19, 30-313 Kraków</li>
+					<li class="section__contact__list-item">sprzedaz@escsa.pl</li>
+					<li class="section__contact__list-item">
+						<a class="section__contact__phone"  href="tel: +48126337308">+48 12 633 73 08</a>
+						<a  class="section__contact__phone" href="tel: +48126565158">+48 12 656 51 58</a>
+					</li>
+				</ul>
+				<p class="section__contact__open-time">poniedziałek - piątek: 9.00 - 17.00</p>
+				<ul class="section__contact__list section__contact__list--right">
+					<li class="section__contact__list-item">ESC SA Centrum - ul. Mieszczańska 19, 30-313 Kraków</li>
+					<li class="section__contact__list-item">sprzedaz@escsa.pl</li>
+					<li class="section__contact__list-item">
+						<a class="section__contact__phone"  href="tel: +48126337308">+48 12 633 73 08</a>
+						<a  class="section__contact__phone" href="tel: +48126565158">+48 12 656 51 58</a>
+					</li>
+				</ul>
+			</div>
+		</section>
 
-		<!-- <script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-			crossorigin="anonymous"
-		></script> -->
+		<footer></footer>
 
 		<script src="/script.js"></script>
 	</body>
