added signs and circles to website

--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@
 					<img class="sign__icon divide" src="/img/aag.png"></img>
 				</div>
 
+				<div class="main__sings main__content__signs--mid-right signs">
+					<img class="sign__icon sum" src="/img/aak.png"></img>
+					<img class="sign__icon divide" src="/img/aag.png"></img>
+				</div>
+
 				<div class="main__content__circle-black circle circle-black"></div>
 
 				<section class="main__content__products">		
@@ -249,7 +254,9 @@
 		
 		<section class="section__contact">
 			<h2 class="section__heading container">Kontakt</h2>
+			
 			<div class="section__contact__map">
+				<div class="section__contact__circle-black circle circle-black"></div>
 				<div class="section__contact__logo-esc">
 					<img class="section__contact__logo-esc-img" src="/img/ajv.png" alt="logo esc">
 				</div>
@@ -293,6 +300,12 @@
 		</section>
 
 		<section class="logos">
+
+			<div class="logos__sings signs">
+				<img class="sign__icon sum" src="/img/aak.png"></img>
+				<img class="sign__icon multiplication" src="/img/aam.png"></img>
+			</div>
+
 			<div class="logos__box container">
 				<img src="/img/alv.png" alt="Logo novitus">
 				<img src="/img/alt.png" alt="Logo posnet">
