added gray numbers

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 						<a class="header__right__flag-link" href="#"></a>
 						<a class="header__right__flag-link" href="#"></a>
 						<a class="header__right__flag-link flag-link--active" href="#"></a>
+						<p class="number number__nine">9</p>
 					</div>
 				</div>
 			</div>
@@ -197,7 +198,9 @@
 					<img class="sign__icon divide" src="/img/aag.png"></img>
 				</div>
 
-				<div class="main__aside__circle-black circle circle-black"></div>
+				<div class="main__aside__circle-black circle circle-black">
+					<p class="number number__one">1</p>
+				</div>
 				<div class="main__aside__circle-blue-bg circle-blue-bg"></div>
 
 				<section class="main__aside__industries">
@@ -233,21 +236,20 @@
 					<img class="sign__icon multiplication" src="/img/aam.png"></img>
 					<img class="sign__icon divide" src="/img/aag.png"></img>
 				</div>
-
 				<div class="main__sings main__content__signs--mid-right signs">
 					<img class="sign__icon sum" src="/img/aak.png"></img>
 					<img class="sign__icon divide" src="/img/aag.png"></img>
 				</div>
-
+				<p class="number number__two">2</p>
+				<p class="number number__three">3</p>
 				<div class="main__content__circle-black circle circle-black"></div>
 
-				<section class="main__content__products">		
+				<section class="main__content__products">
+					<p class="number number__four">4</p>		
 					<h2 class="main__heading">Katalog produktów</h2>
 					<div class="main__content__products-box"></div>
-				</section>
-			
+				</section>			
 			</div>
-
 		</main>
 		<div class="bg-right"></div>
 		<div class="bg-right bg-right-second"></div>
@@ -286,6 +288,7 @@
 
 		<section class="about">
 			<h2 class="section__heading container">O nas</h2>
+			<p class="number number__seven">7</p>
 
 			<div class="about__text__box container">
 				<p class="about__text ">Zajmujemy się kompleksową obsługą informatyczną przedsiębiorstw oraz wdrażaniem oprogramowania do zarządzania sprzedażą i gospodarką magazynową. Prezentowane na stronie produkty to oprócz oprogramowania szeroko rozumiana elektronika wyposażenia handlu. Na naszym portalu znajdą Państwo atrakcyjną ofertę urządzeń fiskalnych w korzystnych cenach: kasy fiskalne, czy też inaczej nazywane kasy rejestrujące, drukarki fiskalne, terminale fiskalne oraz zarówno fiskalne, jak i niefiskalne systemy POS. Ponadto mamy w ofercie sklepowe wagi elektroniczne: etykietujące, kalkulacyjne i platformowe. Całość uzupełnia oferta terminali płatniczych, kolektorów danych, drukarek kart i etykiet, drukarek paragonowych tzw. bonowników. Znajdą Państwo u nas również szeroki asortyment akcesoriów do sprzedawanych urządzeń jak pokrowce do kas fiskalnych, szuflady kasowe, rolki do kas i drukarek fiskalnych czy też metkownice. Oferowane przez nas urządzenia fiskalne wyprodukowane są przez czołowych na rynku producentów, jak: Posnet, ElzaB, Novitus. Od jakiegoś czasu w naszej ofercie dostępne są nowego typu kasy fiskalne tzw. kasy fiskalne online, które umożliwiają łączenie się z Centralnym Repozytorium Kas. Urządzenia fiskalne dostępne na naszej stronie są nowoczesne, funkcjonalne i różnorodne po to, aby mogły być wykorzystywane w małych i dużych biznesach oraz sprzedaży mobilnej.</p>
@@ -300,12 +303,10 @@
 		</section>
 
 		<section class="logos">
-
 			<div class="logos__sings signs">
 				<img class="sign__icon sum" src="/img/aak.png"></img>
 				<img class="sign__icon multiplication" src="/img/aam.png"></img>
 			</div>
-
 			<div class="logos__box container">
 				<img src="/img/alv.png" alt="Logo novitus">
 				<img src="/img/alt.png" alt="Logo posnet">
