--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Fiskasy.pl - test kodowania</title>
-
 		<link rel="stylesheet" href="style.css" />
-		<!-- <link rel="stylesheet" href="style2.css" /> -->
-
-		
+	
 		<script
 			src="https://kit.fontawesome.com/0ef49ab5e4.js"
 			crossorigin="anonymous"
@@ -16,6 +13,8 @@
 	</head>
 
 	<body>
+		<div class="bg-right"></div>
+		<div class="bg-right bg-right-second"></div>
 		<header class="header">
 			<div class="header__wrapper">
 				<div class="header__circle-top circle"></div>
@@ -175,7 +174,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="main container">
+		<div class="main container">
 			<aside class="main__aside">
 				<div class="main__sings main__aside__signs-top signs">
 					<img class="sign__icon sum" src="/img/aak.png"></img>
@@ -224,9 +223,10 @@
 				<section class="main__content__promotions">
 					<h2 class="main__heading headingBasic">Promocje</h2>
 					<div class="main__content__promotions-box">
-						<button class="main__content__promotions-btn--left btn btn-arrow arrow-left"></button>
-						<button class="main__content__promotions-btn--right btn btn-arrow arrow-right"></button>
-					</div>				
+					</div>			
+					
+					<button class="main__content__promotions-btn--left btn btn-arrow arrow-left btn-slider-left"></button>
+					<button class="main__content__promotions-btn--right btn btn-arrow arrow-right btn-slider-right"></button>	
 				</section>
 
 				<div class="main__sings main__content__signs--top-right signs">
@@ -250,8 +250,7 @@
 				</section>			
 			</div>
 		</main>
-		<div class="bg-right"></div>
-		<div class="bg-right bg-right-second"></div>
+	
 		
 		<section class="section__contact">
 			<h2 class="section__heading headingBasic container">Kontakt</h2>
@@ -346,5 +345,6 @@
 		</footer>
 
 		<script src="/script.js"></script>
+		<script src="/slider.js"></script>
 	</body>
 </html>
